# SLATEC

./: CMakeLists.txt
src/: CMakeLists.txt
src/approximation/: CMakeLists.txt
src/data_handling/: CMakeLists.txt
src/diff_integ/: CMakeLists.txt
src/diff_integ_eq/: CMakeLists.txt
src/integ_trans/: CMakeLists.txt
src/interpolation/: CMakeLists.txt
src/linear/: CMakeLists.txt
src/nonlin_eq/: CMakeLists.txt
src/optimization/: CMakeLists.txt
src/service/: CMakeLists.txt
src/special_functions/: CMakeLists.txt
